Cleaned out most of ArangoDB. Added H2 (not SQLite) DB with geo additions. Things are kind of working, but messy.